# SparqReflect

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/html/: NetworkClient_8hpp.html  NetworkClient_8hpp.js  NetworkClient_8hpp__dep__incl.dot  NetworkClient_8hpp__incl.dot  NetworkClient_8hpp_source.html  README_8md.html  SPARQReflector_8hpp.html  SPARQReflector_8hpp.js  SPARQReflector_8hpp__dep__incl.dot  SPARQReflector_8hpp__incl.dot  SPARQReflector_8hpp_source.html  annotated.html  annotated_dup.js  classMiniSparqlParser-members.html  classMiniSparqlParser.html  classMiniSparqlParser.js  classMiniSparqlParser__coll__graph.dot  classMiniSparqlParser_ab625a85e900e5def58cefb250a06b9a6_icgraph.dot  classMiniSparqlParser_ae8b42880b5afb16b3df6ecd254171063_icgraph.dot  classNetworkClient-members.html  classNetworkClient.html  classNetworkClient.js  classNetworkClient_a00ce84916dad5792fc2bd30dbb067e73_icgraph.dot  classNetworkClient_a3852ccfed081baaec76e134dea8a3767_cgraph.dot  classNetworkClient_a3852ccfed081baaec76e134dea8a3767_icgraph.dot  classNetworkClient_ae3fbae1db7dad3e55c3b51da5cc164dd_icgraph.dot  classSparqlReflector-members.html  classSparqlReflector.html  classSparqlReflector.js  classSparqlReflector_a47017800afe3ee2c46e5c93292817490_cgraph.dot  classSparqlReflector_a655c8a45a2ab9e76195bdbe7a8760b6d_cgraph.dot  classSparqlReflector_a655c8a45a2ab9e76195bdbe7a8760b6d_icgraph.dot  classSparqlReflector_a96c547cde8f4b672bdc5372b4100303a_cgraph.dot  classSparqlReflector_a96c547cde8f4b672bdc5372b4100303a_icgraph.dot  classSparqlReflector_a9bbf9a18abe628b9f678e508826719c7_cgraph.dot  classSparqlReflector_aa9bdebd807b7e40222ad54d9dc4d1bb1_cgraph.dot  classSparqlReflector_aa9bdebd807b7e40222ad54d9dc4d1bb1_icgraph.dot  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  (+30 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_1.js  files_3.js  functions_0.js  functions_4.js  functions_6.js  functions_8.js  namespaces_0.js  pages_2.js  pages_4.js  pages_5.js  pages_6.js  searchdata.js  variables_0.js  (+1 more)
docs/latex/: NetworkClient_8hpp.tex  NetworkClient_8hpp.tex.tmp  NetworkClient_8hpp__dep__incl.dot  NetworkClient_8hpp__incl.dot  NetworkClient_8hpp_source.tex  SPARQReflector_8hpp.tex  SPARQReflector_8hpp__dep__incl.dot  SPARQReflector_8hpp__incl.dot  SPARQReflector_8hpp_source.tex  annotated.tex  classMiniSparqlParser.tex  classMiniSparqlParser_ab625a85e900e5def58cefb250a06b9a6_icgraph.dot  classMiniSparqlParser_ae8b42880b5afb16b3df6ecd254171063_icgraph.dot  classNetworkClient.tex  classNetworkClient__coll__graph.dot  classNetworkClient_a00ce84916dad5792fc2bd30dbb067e73_icgraph.dot  classNetworkClient_a3852ccfed081baaec76e134dea8a3767_cgraph.dot  classNetworkClient_a3852ccfed081baaec76e134dea8a3767_icgraph.dot  classNetworkClient_ae3fbae1db7dad3e55c3b51da5cc164dd_icgraph.dot  classSparqlReflector.tex  classSparqlReflector__coll__graph.dot  classSparqlReflector_a47017800afe3ee2c46e5c93292817490_cgraph.dot  classSparqlReflector_a655c8a45a2ab9e76195bdbe7a8760b6d_cgraph.dot  classSparqlReflector_a655c8a45a2ab9e76195bdbe7a8760b6d_icgraph.dot  classSparqlReflector_a96c547cde8f4b672bdc5372b4100303a_cgraph.dot  classSparqlReflector_a96c547cde8f4b672bdc5372b4100303a_icgraph.dot  classSparqlReflector_a9bbf9a18abe628b9f678e508826719c7_cgraph.dot  classSparqlReflector_aa9bdebd807b7e40222ad54d9dc4d1bb1_cgraph.dot  classSparqlReflector_aa9bdebd807b7e40222ad54d9dc4d1bb1_icgraph.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  index.tex  main_8cpp.tex  main_8cpp__incl.dot  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.dot  namespacereflection__impl.tex  namespaces.tex  refman.tex  structWikidataItem.tex  structWikidataItem__coll__graph.dot  (+1 more)
src/: NetworkClient.hpp  SPARQReflector.hpp  SparqlReflector.hpp  main.cpp
tests/: test_main.cpp
